Update home page & edits

--- a/site/about/overview.qmd
+++ b/site/about/overview.qmd
@@ -24,6 +24,8 @@ listing:
       description: "Gain practical experience and discover what the platform has to offer with our hands-on training courses."
 aliases:
   - /guide/overview.html
+  - /about/about-validmind.html
+  - /about.html
 ---
 
 {{< var vm.product >}} is the system of record for AI governance. It models the full lifecycle of AI systems, models, use cases, and tools, along with their dependencies, and automates the governance and documentation you build on top.
