--- a/site/about/use-cases/ai-governance.qmd
+++ b/site/about/use-cases/ai-governance.qmd
@@ -2,19 +2,18 @@
 title: "AI governance"
 date: last-modified
 listing:
-  - id: ai-governance-next-steps
-    type: grid
-    max-description-length: 250
-    grid-columns: 2
-    sort: false
-    fields: [title, description]
-    contents:
-      title: "EU AI Act implementation guide"
-      description: "Implement EU AI Act compliance using {{< var vm.product >}}."
-    - path: eu-ai-act.qmd
-      title: "AI governance training"
-      description: "Learn how to use {{< var vm.product >}} for AI governance to establish organizational oversight for AI systems, manage use cases through their lifecycle, and ensure compliance with regulations like the EU AI Act."
-    - path: ../../training/ai-governance/ai-governance-register.qmd
+  id: ai-governance-next-steps
+  type: grid
+  max-description-length: 250
+  grid-columns: 2
+  sort: false
+  contents:
+  - path: ./eu-ai-act.qmd
+    title: "EU AI Act implementation guide"
+    description: "Implement EU AI Act compliance using {{< var vm.product >}}."
+  - path: ../../training/ai-governance/ai-governance-register.qmd
+    title: "AI governance training"
+    description: "Learn how to use {{< var vm.product >}} for AI governance to establish organizational oversight for AI systems, manage use cases through their lifecycle, and ensure compliance with regulations like the EU AI Act."
 ---
 
 AI governance is the organizational framework for directing and overseeing how AI is designed, deployed, and used. It sets policy, accountability, and decision rights, covering ethics, compliance, risk appetite, lifecycle controls, and ongoing oversight across people, process, and technology.
