--- a/site/index.qmd
+++ b/site/index.qmd
@@ -484,16 +484,16 @@ Validation
 
 ::: { .w-80-ns}
 
-::: {.f3 .b}
-{{< var vm.product >}} [Tour]{.pink}
-:::
+<!-- ::: {.f3 .b}
+Use [cases]{.pink}
+::: -->
 
-::: {.pl2 .pr2 .nt2 .mid-gray .f5}
-{{< var vm.product >}} is a platform that helps identify AI and LLM risks while generating regulatory-compliant model documentation for developers, data scientists, and compliance teams.
+::: {.f4}
+{{< var vm.product >}} gives you the tools for effective [AI governance]{.pink .b} and [model risk management]{.pink .b}, whether you are working toward EU AI Act compliance or managing model risk under SR 11-7, SS1/23, or E-23.
 :::
 
 ::: {.nt3}
-[**Request a Demo**](https://validmind.com/request-demo/){.button .button-white}
+[**Explore use cases**](/about/overview.qmd){.button .button-white}
 :::
 
 :::
