Fix børked links

--- a/site/about/use-cases/e-23.qmd
+++ b/site/about/use-cases/e-23.qmd
@@ -67,7 +67,7 @@ Compensating controls for "black box" approaches where full interpretability is 
 4. Configure alerts for unexpected model behavior.
 
 ::: {.callout title="Related documentation"}
-- [Set up ongoing monitoring](/guide/monitoring/set-up-ongoing-monitoring.qmd)
+- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 - [Configure workflows](/guide/workflows/configure-workflows.qmd)
 :::
 
@@ -86,8 +86,7 @@ Evaluation of ethical implications and discrimination risks in AI models.
 4. Implement ongoing bias monitoring.
 
 ::: {.callout title="Related documentation"}
-- [Run tests](/developer/model-testing/run-tests.qmd)
-- [Create custom tests](/developer/model-testing/create-custom-tests.qmd)
+- [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
 :::
 
 ### Autonomous decision-making
@@ -123,7 +122,7 @@ Monitoring for performance degradation over time.
 4. Document drift monitoring methodology.
 
 ::: {.callout title="Related documentation"}
-- [Set up ongoing monitoring](/guide/monitoring/set-up-ongoing-monitoring.qmd)
+- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 :::
 
 ### Dynamic learning
@@ -142,7 +141,7 @@ Management of continuously updating models.
 
 ::: {.callout title="Related documentation"}
 - [Configure workflows](/guide/workflows/configure-workflows.qmd)
-- [Work with findings](/guide/model-validation/working-with-findings.qmd)
+- [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
 :::
 
 ---
