--- a/site/about/use-cases/eu-ai-act.qmd
+++ b/site/about/use-cases/eu-ai-act.qmd
@@ -85,8 +85,7 @@ The EU AI Act requirements overlap with existing model risk management framework
    - Set up alerts for data quality issues.
 
 ::: {.callout title="Related documentation"}
-- [Run tests](/developer/model-testing/run-tests.qmd)
-- [Create custom tests](/developer/model-testing/create-custom-tests.qmd)
+- [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
 :::
 
 ---
@@ -119,7 +118,7 @@ The EU AI Act requirements overlap with existing model risk management framework
 
 ::: {.callout title="Related documentation"}
 - [Work with document templates](/guide/templates/working-with-document-templates.qmd)
-- [Discover and use tests](/developer/model-testing/discover-and-use-tests.qmd)
+- [Test descriptions](/developer/model-testing/test-descriptions.qmd)
 :::
 
 ---
@@ -152,7 +151,7 @@ The EU AI Act requirements overlap with existing model risk management framework
 
 ::: {.callout title="Related documentation"}
 - [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
-- [Work with findings](/guide/model-validation/working-with-findings.qmd)
+- [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
 :::
 
 ---
@@ -205,7 +204,7 @@ The EU AI Act requirements overlap with existing model risk management framework
    - Track intervention decisions
 
 ::: {.callout title="Related documentation"}
-- [Set up ongoing monitoring](/guide/monitoring/set-up-ongoing-monitoring.qmd)
+- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 - [Configure workflows](/guide/workflows/configure-workflows.qmd)
 :::
 
@@ -235,5 +234,5 @@ The EU AI Act requirements overlap with existing model risk management framework
 
 ::: {.callout title="Related documentation"}
 - [Configure workflows](/guide/workflows/configure-workflows.qmd)
-- [Set up ongoing monitoring](/guide/monitoring/set-up-ongoing-monitoring.qmd)
+- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 :::
