--- a/site/about/use-cases/sr-11-7.qmd
+++ b/site/about/use-cases/sr-11-7.qmd
@@ -81,7 +81,7 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ::: {.callout title="Related documentation"}
 - [Work with document templates](/guide/templates/working-with-document-templates.qmd)
-- [Add and edit documentation](/guide/model-documentation/add-and-edit-documentation.qmd)
+- [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 :::
 
 ---
@@ -111,8 +111,7 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
    - Document testing coverage.
 
 ::: {.callout title="Related documentation"}
-- [Run tests](/developer/model-testing/run-tests.qmd)
-- [Work with test suites](/developer/model-testing/work-with-test-suites.qmd)
+- [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
 :::
 
 ---
@@ -143,7 +142,7 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ::: {.callout title="Related documentation"}
 - [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
-- [Work with findings](/guide/model-validation/working-with-findings.qmd)
+- [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
 :::
 
 ---
@@ -173,7 +172,7 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
    - Document review requirements.
 
 ::: {.callout title="Related documentation"}
-- [Set up ongoing monitoring](/guide/monitoring/set-up-ongoing-monitoring.qmd)
+- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 - [Configure workflows](/guide/workflows/configure-workflows.qmd)
 :::
 
