--- a/site/about/use-cases/ss1-23.qmd
+++ b/site/about/use-cases/ss1-23.qmd
@@ -143,7 +143,7 @@ The regulation encourages **proportionate application** based on the size and co
 
 ::: {.callout title="Related documentation"}
 - [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
-- [Work with findings](/guide/model-validation/working-with-findings.qmd)
+- [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
 :::
 
 ---
@@ -173,7 +173,7 @@ The regulation encourages **proportionate application** based on the size and co
    - Track change history.
 
 ::: {.callout title="Related documentation"}
-- [Set up ongoing monitoring](/guide/monitoring/set-up-ongoing-monitoring.qmd)
+- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 - [Configure workflows](/guide/workflows/configure-workflows.qmd)
 :::
 
@@ -205,7 +205,7 @@ SS1/23 specifically addresses emerging technologies. {{< var vm.product >}} help
 
 ::: {.callout title="Related documentation"}
 - [LLM features](/about/overview-llm-features.qmd)
-- [Set up ongoing monitoring](/guide/monitoring/set-up-ongoing-monitoring.qmd)
+- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 :::
 
 ---
