Change links to margin footnotes, other formatting fixes

--- a/site/about/use-cases/e-23.qmd
+++ b/site/about/use-cases/e-23.qmd
@@ -13,7 +13,7 @@ E-23 establishes expectations for federally regulated deposit-taking institution
 
 ## Traditional MRM requirements
 
-E-23 aligns with established MRM frameworks, requiring:
+E-23 aligns with established MRM frameworks,[^1] requiring:
 
 - **Model inventory** — Comprehensive registry of all models
 - **Development standards** — Clear documentation of model design and implementation
@@ -21,12 +21,10 @@ E-23 aligns with established MRM frameworks, requiring:
 - **Ongoing monitoring** — Performance tracking and periodic review
 - **Governance** — Board oversight and clear accountability
 
-::: {.callout title="Related documentation"}
-- [Model risk management overview](model-risk-management.qmd)
-- [SR 11-7 implementation guide](sr-11-7.qmd)
-:::
 
----
+::: {.callout title="External resources"}
+[OSFI Guideline E-23](https://www.osfi-bsif.gc.ca/Eng/fi-if/rg-ro/gdn-ort/gl-ld/Pages/e23.aspx)
+:::
 
 ## AI/ML-specific considerations
 
@@ -38,19 +36,13 @@ Enhanced requirements for model interpretability ensure stakeholders can underst
 
 #### Steps
 
-1. Configure documentation templates to capture explainability information.
+1. Configure documentation templates[^2] to capture explainability information.
 
-2. Run interpretability tests to generate explanations.
+2. Run interpretability tests to generate explanations.[^3]
 
 3. Document the level of explainability appropriate for model risk tier.
 
 4. Establish processes for explaining decisions to affected parties.
-
-
-::: {.callout title="Related documentation"}
-- [Work with document templates](/guide/templates/working-with-document-templates.qmd)
-- [LLM features](/about/overview-llm-features.qmd)
-:::
 
 ### Alternative controls
 
@@ -60,16 +52,11 @@ Compensating controls for "black box" approaches where full interpretability is 
 
 1. Document the rationale for using less interpretable models.
 
-2. Implement enhanced monitoring as a compensating control.
+2. Implement enhanced monitoring[^4] as a compensating control.
 
 3. Establish human oversight requirements.
 
-4. Configure alerts for unexpected model behavior.
-
-::: {.callout title="Related documentation"}
-- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
-- [Configure workflows](/guide/workflows/configure-workflows.qmd)
-:::
+4. Configure alerts for unexpected model behavior.[^5]
 
 ### Bias assessment
 
@@ -77,17 +64,13 @@ Evaluation of ethical implications and discrimination risks in AI models.
 
 #### Steps
 
-1. Run fairness and bias tests during development.
+1. Run fairness and bias tests[^6] during development.
 
 2. Document bias assessment methodology.
 
 3. Establish thresholds for acceptable bias levels.
 
 4. Implement ongoing bias monitoring.
-
-::: {.callout title="Related documentation"}
-- [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
-:::
 
 ### Autonomous decision-making
 
@@ -99,13 +82,9 @@ Governance for self-learning capabilities and automated decisions.
 
 2. Establish human oversight requirements.
 
-3. Configure review workflows for autonomous decisions.
+3. Configure review workflows[^5] for autonomous decisions.
 
 4. Implement safeguards and intervention mechanisms.
-
-::: {.callout title="Related documentation"}
-- [Configure workflows](/guide/workflows/configure-workflows.qmd)
-:::
 
 ### Model drift
 
@@ -113,17 +92,13 @@ Monitoring for performance degradation over time.
 
 #### Steps
 
-1. Configure ongoing monitoring for drift detection.
+1. Configure ongoing monitoring[^4] for drift detection.
 
 2. Set up alerts for performance degradation.
 
 3. Establish thresholds for re-validation triggers.
 
 4. Document drift monitoring methodology.
-
-::: {.callout title="Related documentation"}
-- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
-:::
 
 ### Dynamic learning
 
@@ -135,16 +110,9 @@ Management of continuously updating models.
 
 2. Establish change control for model updates.
 
-3. Configure validation requirements for dynamic models.
+3. Configure validation requirements[^5] for dynamic models.
 
-4. Implement rollback procedures.
-
-::: {.callout title="Related documentation"}
-- [Configure workflows](/guide/workflows/configure-workflows.qmd)
-- [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
-:::
-
----
+4. Implement rollback procedures.[^7]
 
 ## Implementation checklist
 
@@ -159,6 +127,17 @@ Use this checklist to track your E-23 implementation progress:
 - [ ] Human oversight controls in place
 - [ ] Dynamic learning governance established
 
-::: {.callout title="External resources"}
-- [OSFI Guideline E-23](https://www.osfi-bsif.gc.ca/Eng/fi-if/rg-ro/gdn-ort/gl-ld/Pages/e23.aspx)
-:::
+<!-- FOOTNOTES -->
+[^1]: [Model risk management overview](model-risk-management.qmd)
+
+[^2]: [Work with document templates](/guide/templates/working-with-document-templates.qmd)
+
+[^3]: [LLM features](/about/overview-llm-features.qmd)
+
+[^4]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^5]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
+
+[^6]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
+
+[^7]: [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
