--- a/site/about/use-cases/eu-ai-act.qmd
+++ b/site/about/use-cases/eu-ai-act.qmd
@@ -31,11 +31,13 @@ The EU AI Act categorizes AI systems by risk level:
 
 - **Minimal risk** — AI systems with no specific requirements.
 
+::: {.callout title="External resources"}
+[EU AI Act (Regulation (EU) 2024/1689) on EUR-Lex](https://eur-lex.europa.eu/eli/reg/2024/1689)
+:::
+
 ### Harmonization with other standards
 
-The EU AI Act requirements overlap with existing model risk management frameworks. Organizations already following SR 11-7, SS1/23, or E-23 can leverage existing documentation and controls.
-
----
+The EU AI Act requirements overlap with existing model risk management frameworks. Organizations already following SR 11-7, SS1/23, or E-23 can  leverage existing documentation and controls but must also comply with the EU AI Act requirements.
 
 ## 1. Risk management system implementation (Article 9)
 
@@ -44,23 +46,16 @@ The EU AI Act requirements overlap with existing model risk management framework
 ### Steps
 
 1. Complete the risk classification questionnaire:
-   - Configure custom inventory fields to capture EU AI Act risk classification.
+   - Configure custom inventory fields[^1] to capture EU AI Act risk classification.
    - Set up fields for prohibited, high-risk, limited-risk, and minimal-risk categories.
 
 2. Map fields to EU AI Act requirements:
    - Create custom fields aligned to Article 9 requirements.
    - Document risk assessment criteria and thresholds.
 
-3. Set up custom workflows for different risk levels:
+3. Set up custom workflows[^2] for different risk levels:
    - Configure approval workflows based on risk classification.
    - High-risk systems require additional review gates.
-
-::: {.callout title="Related documentation"}
-- [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
-- [Configure workflows](/guide/workflows/configure-workflows.qmd)
-:::
-
----
 
 ## 2. Data governance setup (Article 10)
 
@@ -72,7 +67,7 @@ The EU AI Act requirements overlap with existing model risk management framework
    - Set up the developer environment for data quality testing.
    - Connect to your data sources.
 
-2. Implement out-of-the-box data quality tests:
+2. Implement out-of-the-box data quality tests:[^3]
    - Run automated tests for data completeness, accuracy, and relevance.
    - Document data quality metrics.
 
@@ -84,23 +79,17 @@ The EU AI Act requirements overlap with existing model risk management framework
    - Configure dashboards to monitor data quality across systems.
    - Set up alerts for data quality issues.
 
-::: {.callout title="Related documentation"}
-- [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
-:::
-
----
-
 ## 3. Technical documentation management (Article 11)
 
 **Purpose:** Generate and customize required model documentation to meet Article 11 requirements for technical documentation.
 
 ### Steps
 
-1. Work with documentation templates:
+1. Work with documentation templates:[^4]
    - Select or create templates aligned to EU AI Act requirements.
    - Configure sections for system description, design, and compliance.
 
-2. Discover and use tests:
+2. Discover and use tests:[^5]
    - Map available tests to Article 11 documentation requirements.
    - Run tests to generate evidence
 
@@ -116,20 +105,13 @@ The EU AI Act requirements overlap with existing model risk management framework
    - Insert additional evidence and documentation, as needed.
    - Link artifacts to documentation sections.
 
-::: {.callout title="Related documentation"}
-- [Work with document templates](/guide/templates/working-with-document-templates.qmd)
-- [Test descriptions](/developer/model-testing/test-descriptions.qmd)
-:::
-
----
-
 ## 4. Accuracy and robustness validation (Article 15)
 
 **Purpose:** Validate model accuracy and demonstrate robustness to meet Article 15 requirements.
 
 ### Steps
 
-1. Prepare validation reports:
+1. Prepare validation reports:[^6]
    - Set up validation report templates
    - Configure validation workflows
 
@@ -141,7 +123,7 @@ The EU AI Act requirements overlap with existing model risk management framework
    - Implement challenger model workflows
    - Compare performance across models
 
-4. Record findings and remediations:
+4. Record findings and remediations:[^7]
    - Track validation findings
    - Document remediation actions
 
@@ -149,24 +131,17 @@ The EU AI Act requirements overlap with existing model risk management framework
    - Generate compliance summaries
    - Review against Article 15 criteria
 
-::: {.callout title="Related documentation"}
-- [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
-- [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
-:::
-
----
-
 ## 5. Transparency implementation (Article 13)
 
 **Purpose:** Set up transparent reporting and decision explanations to meet Article 13 requirements.
 
 ### Steps
 
-1. Work with analytics for non-technical stakeholders:
+1. Work with analytics[^8] for non-technical stakeholders:
    - Configure dashboards for business users
    - Create accessible summaries of AI system behavior
 
-2. Set up custom dashboards:
+2. Set up custom dashboards:[^9]
    - Build dashboards showing key transparency metrics
    - Include interpretability information
 
@@ -174,20 +149,13 @@ The EU AI Act requirements overlap with existing model risk management framework
    - Document how AI systems make decisions
    - Implement explainability features
 
-::: {.callout title="Related documentation"}
-- [Work with analytics](/guide/reporting/working-with-analytics.qmd)
-- [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd)
-:::
-
----
-
 ## 6. Human oversight configuration (Article 14)
 
 **Purpose:** Implement human oversight capabilities to meet Article 14 requirements.
 
 ### Steps
 
-1. Configure ongoing monitoring:
+1. Configure ongoing monitoring:[^10]
    - Set up monitoring workflows
    - Define monitoring metrics and thresholds
 
@@ -195,20 +163,13 @@ The EU AI Act requirements overlap with existing model risk management framework
    - Configure alerts for performance degradation
    - Establish escalation procedures
 
-3. Create human review workflows:
+3. Create human review workflows:[^2]
    - Implement review gates for high-risk decisions
    - Document human-in-the-loop processes
 
 4. Document intervention processes:
    - Define procedures for human override
    - Track intervention decisions
-
-::: {.callout title="Related documentation"}
-- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
-- [Configure workflows](/guide/workflows/configure-workflows.qmd)
-:::
-
----
 
 ## 7. Compliance workflow implementation
 
@@ -217,14 +178,14 @@ The EU AI Act requirements overlap with existing model risk management framework
 ### Steps
 
 1. Set up the conformity assessment process (Article 43):
-   - Configure end-to-end compliance workflows
+   - Configure end-to-end compliance workflows[^2]
    - Document conformity assessment procedures
 
 2. Register high-risk systems (Article 60):
    - Maintain EU database registration information
    - Track registration status
 
-3. Implement post-market monitoring (Article 61):
+3. Implement post-market monitoring (Article 61):[^10]
    - Set up ongoing monitoring for deployed systems
    - Configure incident detection
 
@@ -232,7 +193,23 @@ The EU AI Act requirements overlap with existing model risk management framework
    - Define incident reporting workflows
    - Document escalation procedures
 
-::: {.callout title="Related documentation"}
-- [Configure workflows](/guide/workflows/configure-workflows.qmd)
-- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
-:::
+<!-- FOOTNOTES -->
+[^1]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
+
+[^2]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
+
+[^3]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
+
+[^4]: [Work with document templates](/guide/templates/working-with-document-templates.qmd)
+
+[^5]: [Test descriptions](/developer/model-testing/test-descriptions.qmd)
+
+[^6]: [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
+
+[^7]: [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
+
+[^8]: [Work with analytics](/guide/reporting/working-with-analytics.qmd)
+
+[^9]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd)
+
+[^10]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
