--- a/site/about/use-cases/sr-11-7.qmd
+++ b/site/about/use-cases/sr-11-7.qmd
@@ -17,7 +17,9 @@ SR 11-7 establishes expectations across three main areas:
 
 The guidance emphasizes the three lines of defense model and the concept of "effective challenge" — ensuring models are rigorously questioned and tested.
 
----
+::: {.callout title="External resources"}
+[SR 11-7 on Federal Reserve website](https://www.federalreserve.gov/supervisionreg/srletters/sr1107.htm)
+:::
 
 ## 1. Model inventory setup
 
@@ -31,7 +33,7 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
    - Document inclusion and exclusion criteria.
    - Classify models by type and purpose.
 
-2. Configure inventory fields:
+2. Configure inventory fields:[^1][^2]
 
    - Set up materiality and tiering fields.
    - Add fields for model purpose and business use.
@@ -43,25 +45,18 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
    - Document model ownership and stakeholders.
    - Track model lifecycle status.
 
-::: {.callout title="Related documentation"}
-- [Work with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
-- [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
-:::
-
----
-
 ## 2. Model development documentation
 
 **Purpose:** Document models according to SR 11-7 development standards.
 
 ### Steps
 
-1. Configure documentation templates:
+1. Configure documentation templates:[^3]
 
    - Select or create templates aligned to SR 11-7.
    - Include sections for purpose, design, theory, and logic.
 
-2. Document purpose, design, theory, and logic:
+2. Document purpose, design, theory, and logic:[^4]
 
    - Clearly state the model's intended use.
    - Document the theoretical basis.
@@ -79,20 +74,13 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
    - Identify known limitations.
    - Establish conditions under which the model should not be used.
 
-::: {.callout title="Related documentation"}
-- [Work with document templates](/guide/templates/working-with-document-templates.qmd)
-- [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
-:::
-
----
-
 ## 3. Testing and outcomes analysis
 
 **Purpose:** Test models for accuracy, robustness, and stability per SR 11-7 requirements.
 
 ### Steps
 
-1. Run automated testing:
+1. Run automated testing:[^5]
 
    - Execute accuracy tests.
    - Run robustness and stability tests.
@@ -110,12 +98,6 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
    - Identify conditions where performance degrades.
    - Document testing coverage.
 
-::: {.callout title="Related documentation"}
-- [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
-:::
-
----
-
 ## 4. Independent validation (effective challenge)
 
 **Purpose:** Implement independent validation aligned to SR 11-7's "effective challenge" concept.
@@ -128,24 +110,17 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
    - Define validation scope and requirements.
    - Establish independence requirements.
 
-2. Prepare validation reports:
+2. Prepare validation reports:[^6]
 
    - Use validation report templates.
    - Document validation activities.
    - Summarize findings and conclusions.
 
-3. Track findings and remediation:
+3. Track findings and remediation:[^7]
 
    - Document validation findings.
    - Assign remediation owners.
    - Track remediation progress.
-
-::: {.callout title="Related documentation"}
-- [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
-- [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
-:::
-
----
 
 ## 5. Ongoing monitoring and periodic review
 
@@ -153,7 +128,7 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ### Steps
 
-1. Set up monitoring workflows
+1. Set up monitoring workflows[^8]
 
    - Configure monitoring frequency.
    - Define monitoring metrics.
@@ -165,18 +140,11 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
    - Configure threshold-based alerts.
    - Document alert response procedures.
 
-3. Schedule periodic reviews
+3. Schedule periodic reviews[^9]
 
    - Establish review frequency by model tier.
    - Configure review reminders.
    - Document review requirements.
-
-::: {.callout title="Related documentation"}
-- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
-- [Configure workflows](/guide/workflows/configure-workflows.qmd)
-:::
-
----
 
 ## 6. Governance, policies, and controls
 
@@ -184,31 +152,23 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ### Steps
 
-1. Configure role-based access
+1. Configure role-based access[^10]
 
    - Set up roles for three lines of defense.
    - Configure permissions by role.
    - Ensure appropriate segregation of duties.
 
-2. Configure approval workflows
+2. Configure approval workflows[^9]
 
    - Set up model approval processes.
    - Define approval authorities.
    - Configure escalation paths.
 
-3. Enable audit trail and compliance reporting
+3. Enable audit trail and compliance reporting[^11]
 
    - Configure activity logging.
    - Set up compliance dashboards.
    - Generate audit reports.
-
-::: {.callout title="Related documentation"}
-- [Manage permissions](/guide/configuration/manage-permissions.qmd)
-- [Configure workflows](/guide/workflows/configure-workflows.qmd)
-- [Work with analytics](/guide/reporting/working-with-analytics.qmd)
-:::
-
----
 
 ## Implementation checklist
 
@@ -222,6 +182,25 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 - [ ] Approval workflows in place
 - [ ] Audit trail enabled
 
-::: {.callout title="External resources"}
-- [SR 11-7 on Federal Reserve website](https://www.federalreserve.gov/supervisionreg/srletters/sr1107.htm)
-:::
+<!-- FOOTNOTES -->
+[^1]: [Work with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
+
+[^2]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
+
+[^3]: [Work with document templates](/guide/templates/working-with-document-templates.qmd)
+
+[^4]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+
+[^5]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
+
+[^6]: [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
+
+[^7]: [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
+
+[^8]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^9]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
+
+[^10]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^11]: [Work with analytics](/guide/reporting/working-with-analytics.qmd)
