--- a/site/about/use-cases/ss1-23.qmd
+++ b/site/about/use-cases/ss1-23.qmd
@@ -21,7 +21,9 @@ SS1/23 is organized around five core principles:
 
 The regulation encourages **proportionate application** based on the size and complexity of the institution.
 
----
+::: {.callout title="External resources"}
+[SS1/23 on Bank of England website](https://www.bankofengland.co.uk/prudential-regulation/publication/2023/may/model-risk-management-principles-for-banks-ss)
+:::
 
 ## 1. Model identification and risk classification (Principle 1)
 
@@ -35,24 +37,17 @@ The regulation encourages **proportionate application** based on the size and co
    - Establish criteria for inclusion in the MRM framework.
    - Consider edge cases (spreadsheets, vendor models, etc.).
 
-2. Configure risk classification and tiering fields:
+2. Configure risk classification and tiering fields:[^1]
 
    - Set up model tier fields (e.g., Tier 1, 2, 3).
    - Add risk classification categories.
    - Configure validation based on tier.
 
-3. Document materiality and complexity factors:
+3. Document materiality and complexity factors:[^2]
 
    - Establish materiality thresholds.
    - Document complexity assessment criteria.
    - Link complexity to governance requirements.
-
-::: {.callout title="Related documentation"}
-- [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
-- [Work with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
-:::
-
----
 
 ## 2. Governance (Principle 2)
 
@@ -66,25 +61,17 @@ The regulation encourages **proportionate application** based on the size and co
    - Configure approval authorities.
    - Establish escalation paths to senior management.
 
-2. Configure roles and responsibilities:
+2. Configure roles and responsibilities:[^3]
 
    - Define roles across three lines of defense.
    - Document responsibilities for each role.
    - Configure permissions accordingly.
 
-3. Set up board oversight dashboards:
+3. Set up board oversight dashboards:[^4][^5]
 
    - Create executive-level dashboards.
    - Configure key risk indicators.
    - Establish board reporting cadence.
-
-::: {.callout title="Related documentation"}
-- [Manage permissions](/guide/configuration/manage-permissions.qmd)
-- [Work with analytics](/guide/reporting/working-with-analytics.qmd)
-- [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd)
-:::
-
----
 
 ## 3. Model development, implementation, and use (Principle 3)
 
@@ -92,13 +79,13 @@ The regulation encourages **proportionate application** based on the size and co
 
 ### Steps
 
-1. Configure documentation templates aligned to SS1/23:
+1. Configure documentation templates aligned to SS1/23:[^6]
 
    - Select or create templates covering SS1/23 requirements.
    - Include sections for intended purpose and use boundaries.
    - Document development methodology.
 
-2. Enforce development standards:
+2. Enforce development standards:[^7]
 
    - Document coding and development standards.
    - Configure quality gates in workflows.
@@ -109,13 +96,6 @@ The regulation encourages **proportionate application** based on the size and co
    - Clearly state intended use cases.
    - Document known limitations.
    - Establish use boundaries.
-
-::: {.callout title="Related documentation"}
-- [Work with document templates](/guide/templates/working-with-document-templates.qmd)
-- [Configure workflows](/guide/workflows/configure-workflows.qmd)
-:::
-
----
 
 ## 4. Independent model validation (Principle 4)
 
@@ -129,24 +109,17 @@ The regulation encourages **proportionate application** based on the size and co
    - Ensure validator independence.
    - Define validation scope by model tier.
 
-2. Document objective assessment:
+2. Document objective assessment:[^8]
 
    - Use validation report templates.
    - Document testing methodology.
    - Provide clear conclusions.
 
-3. Implement findings and remediation workflows:
+3. Implement findings and remediation workflows:[^9]
 
    - Track validation findings.
    - Assign remediation owners.
    - Monitor remediation progress.
-
-::: {.callout title="Related documentation"}
-- [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
-- [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
-:::
-
----
 
 ## 5. Model risk mitigants (Principle 5)
 
@@ -160,24 +133,17 @@ The regulation encourages **proportionate application** based on the size and co
    - Link controls to risks mitigated.
    - Track control effectiveness.
 
-2. Configure monitoring and alerts:
+2. Configure monitoring and alerts:[^10]
 
    - Set up ongoing monitoring.
    - Configure performance alerts.
    - Establish response procedures.
 
-3. Implement change management workflows:
+3. Implement change management workflows:[^7]
 
    - Configure model change workflows.
    - Document change approval requirements.
    - Track change history.
-
-::: {.callout title="Related documentation"}
-- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
-- [Configure workflows](/guide/workflows/configure-workflows.qmd)
-:::
-
----
 
 ## 6. ML/AI and emerging technology considerations
 
@@ -189,7 +155,7 @@ SS1/23 specifically addresses emerging technologies. {{< var vm.product >}} help
 
    - Document enhanced validation requirements for ML models.
    - Implement interpretability documentation.
-   - Configure enhanced monitoring.
+   - Configure enhanced monitoring.[^10]
 
 2. Address dynamic adjustments and change management:
 
@@ -197,18 +163,11 @@ SS1/23 specifically addresses emerging technologies. {{< var vm.product >}} help
    - Implement change tracking for dynamic models.
    - Configure validation triggers for model updates.
 
-3. Document explainability and transparency:
+3. Document explainability and transparency:[^11]
 
    - Assess explainability requirements by model type.
    - Document interpretability approaches.
    - Implement transparency controls.
-
-::: {.callout title="Related documentation"}
-- [LLM features](/about/overview-llm-features.qmd)
-- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
-:::
-
----
 
 ## Proportionality
 
@@ -219,8 +178,6 @@ SS1/23 emphasizes proportionate application. Consider:
 - **Model tiering** — Higher-tier models warrant more intensive oversight.
 
 Document your proportionality assessment and how it influences your MRM framework design.
-
----
 
 ## Implementation checklist
 
@@ -235,6 +192,25 @@ Document your proportionality assessment and how it influences your MRM framewor
 - [ ] ML/AI-specific controls documented
 - [ ] Proportionality assessment completed
 
-::: {.callout title="External resources"}
-- [SS1/23 on Bank of England website](https://www.bankofengland.co.uk/prudential-regulation/publication/2023/may/model-risk-management-principles-for-banks-ss)
-:::
+<!-- FOOTNOTES -->
+[^1]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
+
+[^2]: [Work with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
+
+[^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^4]: [Work with analytics](/guide/reporting/working-with-analytics.qmd)
+
+[^5]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd)
+
+[^6]: [Work with document templates](/guide/templates/working-with-document-templates.qmd)
+
+[^7]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
+
+[^8]: [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
+
+[^9]: [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
+
+[^10]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^11]: [LLM features](/about/overview-llm-features.qmd)
